<resources>
    <string name="app_name">Mobiligent</string>
    <string name="app_login">Inloggen</string>
    <string name="app_all_events">Alle meldingen</string>
    <string name="app_my_events">Mijn meldingen</string>
    <string name="app_my_locations">Mijn locaties</string>
    <string name="app_my_routes">Mijn routes</string>
    <string name="app_user_data">Gegevens aanpassen</string>
    <string name="app_logout">Uitloggen</string>
    <string name="app_password_forgot">Paswoord vergeten</string>
    <string name="app_password_reset">Paswoord resetten</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_nl">Paswoord</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short_nl">Aanmelden</string>
    <string name="action_register_nl">Registreren</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_login_failed">Login failed. Please check email/password.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Mobiligent</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
